fix: reject unsafe sync-log table names and commit FS snapshots atomically
sync-db: the sync log table name cannot be a bind parameter, so it is
interpolated into the DDL and DML this strategy issues. It was only
checked for blankness, which left an externalized configuration value
as a SQL injection vector. It must now be a plain SQL identifier,
optionally schema-qualified.

snapshot-fs: the store wrote snapshot.dat and snapshot.meta with two
separate atomic moves, so a crash or a concurrent reader could observe
one snapshot's data paired with another snapshot's metadata. Data and
metadata now live in a single snapshot.bin — metadata header, blank
line, raw bytes — committed with one atomic rename. Saves go through a
uniquely named temporary file so concurrent savers cannot overwrite
each other before either commits.

Snapshots written in the previous two-file layout are still readable;
the next save migrates the catalog and removes the superseded files.

Adds a concurrency test that reproduced the mixed data/metadata read
against the old layout, tests for the legacy read and migration paths,
and table name validation tests.

Full mvn clean verify green including the Docker cluster IT.