@@ -2,10 +2,12 @@ package org.waabox.andersoni.snapshot.fs;
 
 import java.io.IOException;
 import java.io.UncheckedIOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardCopyOption;
 import java.time.Instant;
+import java.util.Arrays;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.regex.Pattern;
@@ -18,39 +20,53 @@ import org.waabox.andersoni.snapshot.SnapshotStore;
  * filesystem.
  *
  * <p>Snapshots are stored under a configurable base directory. Each catalog
- * gets its own subdirectory containing two files:
- * <ul>
- *   <li>{@code snapshot.dat} - the raw serialized data bytes</li>
- *   <li>{@code snapshot.meta} - metadata in a simple key=value format
- *       (hash, version, createdAt in ISO-8601)</li>
- * </ul>
+ * gets its own subdirectory holding a single {@code snapshot.bin} file: a
+ * key=value metadata header (hash, version, createdAt in ISO-8601), a blank
+ * line, then the raw serialized data bytes.
  *
- * <p>Writes use an atomic pattern: data is written to a temporary file and
- * then renamed, providing crash safety. If the JVM crashes mid-write, the
- * previous snapshot remains intact.
+ * <p><strong>Metadata and data are one atomic unit.</strong> They live in the
+ * same file precisely so a snapshot can never be committed halfway: the file
+ * is written to a temporary path and then moved into place with a single
+ * atomic rename. A crash mid-write leaves the previous snapshot intact, and a
+ * concurrent reader observes either the old snapshot or the new one — never
+ * one snapshot's data paired with another's metadata, which is what an
+ * earlier two-file layout allowed.
  *
  * <p>Storage layout:
  * <pre>
  * {baseDir}/
  *   {catalogName}/
- *     snapshot.dat
- *     snapshot.meta
+ *     snapshot.bin
  * </pre>
+ *
+ * <p>Snapshots written by earlier versions, which used a separate
+ * {@code snapshot.dat} and {@code snapshot.meta}, are still readable; the
+ * next save migrates the catalog to the single-file layout.
  *
  * @author waabox(waabox[at]gmail[dot]com)
  */
 public final class FileSystemSnapshotStore implements SnapshotStore {
 
-  /** The name of the data file within each catalog directory. */
   /** Allowed catalog-name characters. Anything else (path separators, {@code
    *  ..}) is rejected to prevent writing/reading outside the base directory. */
   private static final Pattern SAFE_CATALOG_NAME =
       Pattern.compile("^[A-Za-z0-9._-]+$");
 
+  /** The single snapshot file within each catalog directory, holding the
+   *  metadata header and the data bytes as one atomically committed unit. */
+  private static final String SNAPSHOT_FILE = "snapshot.bin";
+
+  /** The name of the legacy data file, still readable on load. */
   private static final String DATA_FILE = "snapshot.dat";
 
-  /** The name of the metadata file within each catalog directory. */
+  /** The name of the legacy metadata file, still readable on load. */
   private static final String META_FILE = "snapshot.meta";
+
+  /** Separates the metadata header from the data bytes: a blank line. Header
+   *  values never contain a newline, so the first occurrence of this sequence
+   *  always terminates the header. */
+  private static final byte[] HEADER_SEPARATOR =
+      "\n\n".getBytes(StandardCharsets.UTF_8);
 
   /** The metadata key for the content hash. */
   private static final String META_KEY_HASH = "hash";
@@ -90,11 +106,12 @@ public final class FileSystemSnapshotStore implements SnapshotStore {
   /**
    * {@inheritDoc}
    *
-   * <p>Saves the snapshot data and metadata to the filesystem using an
-   * atomic write pattern. Data is first written to a temporary file, then
-   * atomically moved to the final location to ensure crash safety.
+   * <p>Writes the metadata header and the data bytes to a temporary file and
+   * then commits them with a single atomic rename, so the snapshot is never
+   * visible in a partially written state.
    *
-   * <p>If a snapshot already exists for the catalog, it is overwritten.
+   * <p>If a snapshot already exists for the catalog, it is overwritten. A
+   * catalog still stored in the legacy two-file layout is migrated here.
    *
    * @throws UncheckedIOException if writing to the filesystem fails
    */
@@ -111,23 +128,37 @@ public final class FileSystemSnapshotStore implements SnapshotStore {
     try {
       Files.createDirectories(catalogDir);
 
-      final Path dataFile = catalogDir.resolve(DATA_FILE);
-      final Path metaFile = catalogDir.resolve(META_FILE);
+      // The header's own trailing newline is dropped so the separator below
+      // is the only blank line in the file.
+      final byte[] header = buildMetaContent(snapshot).stripTrailing()
+          .getBytes(StandardCharsets.UTF_8);
+      final byte[] data = snapshot.data();
 
-      // Write data atomically: write to temp file, then rename.
-      final Path tempDataFile = catalogDir.resolve(DATA_FILE + ".tmp");
-      Files.write(tempDataFile, snapshot.data());
-      Files.move(tempDataFile, dataFile,
-          StandardCopyOption.REPLACE_EXISTING,
-          StandardCopyOption.ATOMIC_MOVE);
+      final byte[] content =
+          new byte[header.length + HEADER_SEPARATOR.length + data.length];
+      System.arraycopy(header, 0, content, 0, header.length);
+      System.arraycopy(HEADER_SEPARATOR, 0, content, header.length,
+          HEADER_SEPARATOR.length);
+      System.arraycopy(data, 0, content,
+          header.length + HEADER_SEPARATOR.length, data.length);
 
-      // Write metadata atomically.
-      final String metaContent = buildMetaContent(snapshot);
-      final Path tempMetaFile = catalogDir.resolve(META_FILE + ".tmp");
-      Files.writeString(tempMetaFile, metaContent);
-      Files.move(tempMetaFile, metaFile,
-          StandardCopyOption.REPLACE_EXISTING,
-          StandardCopyOption.ATOMIC_MOVE);
+      // A unique temp name keeps concurrent savers from overwriting each
+      // other's half-written file before either commits.
+      final Path tempFile = Files.createTempFile(catalogDir, SNAPSHOT_FILE,
+          ".tmp");
+      try {
+        Files.write(tempFile, content);
+        Files.move(tempFile, catalogDir.resolve(SNAPSHOT_FILE),
+            StandardCopyOption.REPLACE_EXISTING,
+            StandardCopyOption.ATOMIC_MOVE);
+      } catch (final IOException e) {
+        Files.deleteIfExists(tempFile);
+        throw e;
+      }
+
+      // The snapshot is committed; drop any legacy files it supersedes.
+      Files.deleteIfExists(catalogDir.resolve(DATA_FILE));
+      Files.deleteIfExists(catalogDir.resolve(META_FILE));
 
     } catch (final IOException e) {
       throw new UncheckedIOException(
@@ -138,9 +169,10 @@ public final class FileSystemSnapshotStore implements SnapshotStore {
   /**
    * {@inheritDoc}
    *
-   * <p>Reads the snapshot data and metadata from the filesystem. Returns
-   * {@link Optional#empty()} if the catalog directory or snapshot files
-   * do not exist.
+   * <p>Reads the snapshot from the single {@code snapshot.bin} file, falling
+   * back to the legacy {@code snapshot.dat} / {@code snapshot.meta} pair for
+   * catalogs written by an earlier version. Returns {@link Optional#empty()}
+   * if no snapshot exists for the catalog.
    *
    * @throws UncheckedIOException if reading from the filesystem fails
    *                              (other than missing files)
@@ -151,6 +183,33 @@ public final class FileSystemSnapshotStore implements SnapshotStore {
     validateCatalogName(catalogName);
 
     final Path catalogDir = baseDir.resolve(catalogName);
+    final Path snapshotFile = catalogDir.resolve(SNAPSHOT_FILE);
+
+    try {
+      if (Files.exists(snapshotFile)) {
+        return Optional.of(
+            parseSnapshotFile(catalogName, Files.readAllBytes(snapshotFile)));
+      }
+      return loadLegacy(catalogName, catalogDir);
+    } catch (final IOException e) {
+      throw new UncheckedIOException(
+          "Failed to load snapshot for catalog: " + catalogName, e);
+    }
+  }
+
+  /**
+   * Reads a snapshot stored in the legacy two-file layout.
+   *
+   * @param catalogName the catalog name, never null
+   * @param catalogDir  the catalog directory, never null
+   *
+   * @return the snapshot, or empty if the legacy files are not both present
+   *
+   * @throws IOException if reading fails
+   */
+  private Optional<SerializedSnapshot> loadLegacy(final String catalogName,
+      final Path catalogDir) throws IOException {
+
     final Path dataFile = catalogDir.resolve(DATA_FILE);
     final Path metaFile = catalogDir.resolve(META_FILE);
 
@@ -158,18 +217,59 @@ public final class FileSystemSnapshotStore implements SnapshotStore {
       return Optional.empty();
     }
 
-    try {
-      final byte[] data = Files.readAllBytes(dataFile);
-      final String metaContent = Files.readString(metaFile);
+    return Optional.of(parseSnapshot(catalogName,
+        Files.readAllBytes(dataFile), Files.readString(metaFile)));
+  }
 
-      final SerializedSnapshot snapshot = parseSnapshot(
-          catalogName, data, metaContent);
+  /**
+   * Splits a single-file snapshot into its metadata header and data bytes.
+   *
+   * @param catalogName the catalog name, never null
+   * @param content     the full file content, never null
+   *
+   * @return the reconstructed snapshot, never null
+   *
+   * @throws IllegalStateException if the header separator is missing
+   */
+  private SerializedSnapshot parseSnapshotFile(final String catalogName,
+      final byte[] content) {
 
-      return Optional.of(snapshot);
-    } catch (final IOException e) {
-      throw new UncheckedIOException(
-          "Failed to load snapshot for catalog: " + catalogName, e);
+    final int separator = indexOfHeaderSeparator(content);
+    if (separator < 0) {
+      throw new IllegalStateException(
+          "Malformed snapshot file for catalog: " + catalogName
+              + ". Missing the blank line separating header from data.");
     }
+
+    final String metaContent =
+        new String(content, 0, separator, StandardCharsets.UTF_8);
+    final byte[] data = Arrays.copyOfRange(content,
+        separator + HEADER_SEPARATOR.length, content.length);
+
+    return parseSnapshot(catalogName, data, metaContent);
+  }
+
+  /**
+   * Finds the blank line separating the metadata header from the data.
+   *
+   * @param content the full file content, never null
+   *
+   * @return the index at which the separator starts, or {@code -1}
+   */
+  private static int indexOfHeaderSeparator(final byte[] content) {
+    for (int i = 0; i + HEADER_SEPARATOR.length <= content.length; i++) {
+      boolean matches = true;
+      for (int j = 0; j < HEADER_SEPARATOR.length; j++) {
+        if (content[i + j] != HEADER_SEPARATOR[j]) {
+          matches = false;
+          break;
+        }
+      }
+      if (matches) {
+        return i;
+      }
+    }
+    return -1;
   }
 
   /**
